<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="262dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/login_to_system"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/username"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/design"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:text="@string/password"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/design"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />

    <LinearLayout
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignUp"
            style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            tools:targetApi="n" />

        <Button
            android:id="@+id/btnSignIn"
            style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:text="@string/sign_in"
            tools:targetApi="n" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>